--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,47 +1,53 @@
 [versions]
 
+bouncycastle = "1.76"
+coroutines = "1.7.3"
+dateTime = "0.5.0"
+dokka = "1.8.10"
 java-languageVersion = "17"
 kotlin = "1.9.22"
-reactive = "1.3.0"
-dateTime = "0.5.0"
-serialization = "1.6.0"
-coroutines = "1.7.3"
 krypto = "4.0.9"
 minidns = "1.0.3"
-dokka = "1.8.10"
-bouncycastle = "1.76"
+reactive = "1.3.0"
+researchgate-release = "3.0.2"
+serialization = "1.6.0"
 signalProtocol = "2.8.1"
+sphinx = "2.10.1"
 
 [libraries]
 
-kotlin-kotlinGradlePlug = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlin-kotlinTestCommon = { group = "org.jetbrains.kotlin", name = "kotlin-test-common", version.ref = "kotlin" }
-kotlin-kotlinTestJunit = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit", version.ref = "kotlin" }
-kotlin-kotlinTestJs = { group = "org.jetbrains.kotlin", name = "kotlin-test-js", version.ref = "kotlin" }
-kotlin-kotlinTestAnnotationsCommon = { group = "org.jetbrains.kotlin", name = "kotlin-test-annotations-common", version.ref = "kotlin" }
-kotlin-dokkaPlug = { group = "org.jetbrains.dokka", name = "dokka-gradle-plugin", version.ref = "dokka" }
+kotlin-kotlinGradlePlug = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-kotlinTestCommon = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
+kotlin-kotlinTestJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
+kotlin-kotlinTestJs = { module = "org.jetbrains.kotlin:kotlin-test-js", version.ref = "kotlin" }
+kotlin-kotlinTestAnnotationsCommon = { module = "org.jetbrains.kotlin:kotlin-test-annotations-common", version.ref = "kotlin" }
+##kotlin-dokkaPlug = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
 
-kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "dateTime" }
-kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "serialization" }
-kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
-kotlinx-serialization-gradlePlug = { group = "org.jetbrains.kotlin", name = "kotlin-serialization", version.ref = "kotlin" }
+kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "dateTime" }
+kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "serialization" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
-kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
-reactive-reaktive = { group = "com.badoo.reaktive", name = "reaktive", version.ref = "reactive" }
-reactive-testing = { group = "com.badoo.reaktive", name = "reaktive-testing", version.ref = "reactive" }
-reactive-utils = { group = "com.badoo.reaktive", name = "utils", version.ref = "reactive" }
-reactive-coroutinesInterop = { group = "com.badoo.reaktive", name = "coroutines-interop", version.ref = "reactive" }
+reactive-reaktive = { module = "com.badoo.reaktive:reaktive", version.ref = "reactive" }
+reactive-testing = { module = "com.badoo.reaktive:reaktive-testing", version.ref = "reactive" }
+reactive-utils = { module = "com.badoo.reaktive:utils", version.ref = "reactive" }
+reactive-coroutinesInterop = { module = "com.badoo.reaktive:coroutines-interop", version.ref = "reactive" }
 
-krypto = { group = "com.soywiz.korlibs.krypto", name = "krypto", version.ref = "krypto" }
+krypto = { module = "com.soywiz.korlibs.krypto:krypto", version.ref = "krypto" }
 
-minidns = { group = "org.minidns", name = "minidns-hla", version.ref = "minidns" }
+minidns = { module = "org.minidns:minidns-hla", version.ref = "minidns" }
 
-bouncycastle = { group = "org.bouncycastle", name = "bctls-jdk18on", version.ref = "bouncycastle" }
+bouncycastle = { module = "org.bouncycastle:bctls-jdk18on", version.ref = "bouncycastle" }
 
-signal-protocol-java = { group = "org.whispersystems", name = "signal-protocol-java", version.ref = "signalProtocol" }
-signal-protocol-android = { group = "org.whispersystems", name = "signal-protocol-android", version.ref = "signalProtocol" }
+signal-protocol-java = { module = "org.whispersystems:signal-protocol-java", version.ref = "signalProtocol" }
+signal-protocol-android = { module = "org.whispersystems:signal-protocol-android", version.ref = "signalProtocol" }
 
-#  = { group = "", name = "", version.ref = "" }
+[plugins]
 
+jetbrains-dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+researchgate-release = { id = "net.researchgate.release", version.ref = "researchgate-release" }
+sphinx = { id = "kr.motd.sphinx", version.ref = "sphinx" }
