Remove OpenSSL framework preparation task

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.cacheKind=none
 kotlin.native.cacheKind.iosX64=none
 kotlin.native.cacheKind.iosSimulatorArm64=none
 kotlin.native.cacheKind.iosArm64=none
