--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
 
 bouncycastle = "1.79"
-coroutines = "1.7.3"
-dateTime = "0.6.1"
-dokka = "1.9.20"
+coroutines = "1.10.2"
+dateTime = "0.6.2"
+dokka = "2.0.0"
 java-languageVersion = "17"
-kotlin = "1.9.25"
+kotlin = "2.1.20"
 krypto = "4.0.10"
 minidns = "1.1.1"
 reactive = "1.3.0"
 researchgate-release = "3.0.2"
-serialization = "1.6.0"
-signalProtocol = "2.8.1"
+serialization = "1.8.1"
+libsignal = "0.71.0"
 sphinx = "2.10.1"
 
 [libraries]
@@ -41,8 +41,8 @@ minidns = { group = "org.minidns", name = "minidns-hla", version.ref = "minidns"
 
 bouncycastle = { group = "org.bouncycastle", name = "bctls-jdk18on", version.ref = "bouncycastle" }
 
-signal-protocol-java = { group = "org.whispersystems", name = "signal-protocol-java", version.ref = "signalProtocol" }
-signal-protocol-android = { group = "org.whispersystems", name = "signal-protocol-android", version.ref = "signalProtocol" }
+signal-protocol-java = { group = "org.signal", name = "libsignal-client", version.ref = "libsignal" }
+signal-protocol-android = { group = "org.signal", name = "libsignal-android", version.ref = "libsignal" }
 
 #  = { group = "", name = "", version.ref = "" }
 
