--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,6 +49,7 @@ signal-protocol-android = { group = "org.whispersystems", name = "signal-protoco
 [plugins]
 
 jetbrains-dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+kotlincocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 researchgate-release = { id = "net.researchgate.release", version.ref = "researchgate-release" }
